--- a/resources/scss/skin/github/theme.scss
+++ b/resources/scss/skin/github/theme.scss
@@ -7,6 +7,7 @@
 @import "bootstrap/table";
 @import "components/cards";
 @import "components/buttons";
+@import "components/toggle";
 @import "layout/sidebar";
 @import "layout/navbar";
 @import "layout/brand";
