--- a/resources/views/partials/header.twig
+++ b/resources/views/partials/header.twig
@@ -2,8 +2,7 @@
     <button  data-toggle="push-menu" href="#" class="btn btn-sm toggle pull-left">
         <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
     </button>
+    <button  data-toggle="push-menu" href="#" class="btn hip-toggle"><span></span></button>
     {% include "pyrocms.theme.pyrocms::partials/sections" %}
     {% include "pyrocms.theme.pyrocms::partials/buttons" %}
-
 </header>
-
