Remove .btn elements outline and hide banner partial if not official skin

--- a/resources/scss/theme/components/_buttons.scss
+++ b/resources/scss/theme/components/_buttons.scss
@@ -1,5 +1,6 @@
 body:not(.pyrocms) {
     .btn {
+        outline: none;
         border-radius: $border-radius;
     }
     .btn-secondary-outline {
