--- a/resources/views/partials/metadata.twig
+++ b/resources/views/partials/metadata.twig
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ image_path('theme::img/favicon.png') }}">
 <link rel="apple-touch-icon" type="image/x-icon" href="{{ image_path('theme::img/favicon.png') }}"/>
 
-{{ asset_add("theme.css", "theme::scss/skin/" ~ setting_value('websemantics.theme.pyrocms::skin') ~ "/theme.scss") }}
+{{ asset_add("theme.css", "theme::scss/skin/" ~ (setting_value('websemantics.theme.pyrocms::skin')?:env('PYROCMS_SKIN')) ~ "/theme.scss") }}
 {{ asset_add("theme.css", "pyrocms.theme.pyrocms::less/fonts/fonts.less", ["parse"]) }}
 {{ asset_add("theme.js", "pyrocms.theme.pyrocms::js/vendor/*") }}
 {{ asset_add("theme.js", "pyrocms.theme.pyrocms::js/libraries/tether.min.js") }}
