--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="row">
-{% if setting_value('websemantics.theme.pyrocms::skin') == 'pyrocms' %}            
+{% if setting_value('websemantics.theme.pyrocms::skin') == 'websemantics.skin.pyrocms' %}            
             <div class="col-lg-6 col-lg-offset-9 col-md-10 col-md-offset-7 col-sm-10 col-sm-offset-7">
                 <div class="logo">
                     {{ img('pyrocms.theme.pyrocms::img/logo-white.png').height(55)|raw }}
