--- a/resources/scss/theme/theme.scss
+++ b/resources/scss/theme/theme.scss
@@ -3,8 +3,7 @@
 //
 
 @import "variables";
-@import "../bootstrap/bootstrap";
-@import "{{ asset_path('pyrocms.theme.pyrocms::scss/theme/theme.scss') }}";
+@import "pyrocms/pyrocms-theme/resources/scss/theme/theme";
 @import "components/scaffolding";
 @import "components/cards";
 @import "components/trees";
